--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "dotenv>=0.9.9",
+    "gradio>=5.49.1",
     "langchain>=0.3.27",
     "langchain-community>=0.3.31",
     "langchain-groq>=0.3.8",
